# droidian-fpd-client

./: CMakeLists.txt
debian/: control  droidian-fpd-client.install
